# mylibs

./: .gitignore  CMakeLists.txt  LICENSE  README.md
memory/: memorytracker.c  memorytracker.h
memory/examples/: example1.c
sockets/: network.h
sockets/tests/: test_basic_client.c  test_basic_server.c  test_oneway_client.c  test_oneway_server.c
